--- a/Moderna/blog-single.html
+++ b/Moderna/blog-single.html
@@ -43,20 +43,19 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>COVID-19 WORLD VACCINATION PROGRESS</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li class="active"><a href="blog.html">Blog</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li class="active"><a href="/">Home</a></li>
+          <li class="drop-down"><a href="">Graphs</a>
+            <ul>
+              <li><a href="/Graphic1">Top 15</a></li>
+              <li><a href="/Graphic2">Daily Worldwide</a></li>
+              <li><a href="/Graphic3">Per country</a></li>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Drop Down 2</a>
@@ -90,10 +89,7 @@
           <h2>Blog</h2>
 
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li>Dolorum optio tempore voluptas dignissimos cumque fuga qui quibusdam quia reiciendis</li>
-          </ol>
+ 
         </div>
 
       </div>
